Fix categories alignment

--- a/bwma_rubik_style.scss
+++ b/bwma_rubik_style.scss
@@ -2192,7 +2192,6 @@ td:not([class]) {
 
   .field-name-field-categories {
     font-weight: bold;
-    text-align: center;
 
     .field__label, .field__items {
       display: inline-block;
